# jay-cli

./: .gitignore  Cargo.toml  README.md
examples/: inquery.rs  pbar.rs  rodio.rs  select.rs
playlist/: jay.json
src/: cli.rs  main.rs  model.rs  mp3_stream_decoder.rs  player.rs  utils.rs
src/commands/: loop_one.rs  mod.rs  random.rs  single.rs
