[package]
name = "jay-cli"
version = "1.1.0"
edition = "2021"
authors = ["danielxu"]
description = "Listen music from CLI"
readme = "README.md"
license = "MIT"
keywords = ["CLI", "Music", "JayChou"]
repository = "https://github.com/Daniel-Xu/jay-cli.git"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = "0.4.26"
clap = { version = "4.3.16", features = ["derive"] }
colored = "2.0.4"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
env_logger = "0.10.0"
include_dir = "0.7.3"
indicatif = "0.17.5"
inquire = "0.6.2"
log = "0.4.19"
minimp3_fixed = "0.5.4"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rodio = { version = "0.17.1"}
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
